feat: items resource - Closes #14 #15
